# trump-sort

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/trump_sort/: __init__.py  core.py
tests/: test_public_api.py
