[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trump-sort"
version = "45.47.0.post1"
description = "The most tremendous, beautifully sorted algorithm ever created. Huge win!"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
authors = [
  { name = "Luminet2023", email = "me@luminet.cn" },
]
license = "LicenseRef-TOSL"
license-files = ["LICENSE"]
keywords = ["sorting", "humor", "satire", "trump-sort"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
